@@ -197,9 +197,7 @@ void               emit_change_signals_for_all_files		      (NautilusDirectory	 
 void               nautilus_directory_emit_done_loading               (NautilusDirectory         *directory);
 void               nautilus_directory_emit_load_error                 (NautilusDirectory         *directory,
 								       GError                    *error);
-NautilusDirectory *nautilus_directory_get_internal                    (const char                *uri,
-								       gboolean                   create);
-NautilusDirectory *nautilus_directory_get_for_location                (GFile                     *location,
+NautilusDirectory *nautilus_directory_get_internal                    (GFile                     *location,
 								       gboolean                   create);
 char *             nautilus_directory_get_name_for_self_as_new_file   (NautilusDirectory         *directory);
 void               nautilus_directory_set_up_request                  (Request                   *request,
